infrastructure/helm/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: cdm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: api-gateway
  rules:
    - http:
        paths:
          - path: /api-gateway
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000
